[KOB-54691] Modernize the Java export stack (JDK 17, java-client 10, Selenium 4)
Java TestNG and JUnit exports now target:
- JDK 17 (maven.compiler.release), explicit compiler plugin, surefire 3.5.4
- Appium java-client 10.1.1 with Selenium pinned via selenium-bom 4.49.0
- TestNG 7.12.0 / JUnit 4.13.2; ReportNG, dom4j and jaxen removed
- okhttp 4.12.0 declared explicitly; jsoup 1.23.2, gson 2.14.0, libphonenumber 9.0.39

Code migration:
- MobileElement -> WebElement, MobileBy -> AppiumBy/By, non-generic drivers
- Context, rotation, location, app and keyboard calls via the java-client
  capability interfaces; io.appium.java_client.Location
- platformName read back from the Selenium 4 Platform enum
- Point/Rectangle are immutable in Selenium 4: crop/scale return new objects
- Driver HTTP read timeout raised to match the local proxy (15 minutes)
- commons-io/codec, guava, spring and apache httpclient usages replaced by
  JDK APIs and okhttp HttpUrl

Behavior changes:
- Swipe steps without a recorded duration emit 800 ms (was `undefined`)
- setLocation keeps decimal coordinates (was truncated to whole degrees)
- findElements always restores the configured implicit wait
- sendKeys fallback (used only when W3C key actions fail) types into the active
  element; the platform keyboard API it used before was removed in java-client 8

Tests: emitter unit tests, TestNG and coverage fixtures, and a compile gate
that generates each Java fixture and runs `mvn test-compile` (required in
CI via REQUIRE_JAVA_COMPILE on Temurin 17).

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>